Store sparse route waypoints